# pdf_extraction_macos_public_version

./: .gitignore  DEPENDENCY_LICENSE_TRANSPARENCY.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: tests.yml
mac_app/PDF Manager.app/Contents/: Info.plist
mac_app/PDF Manager.app/Contents/MacOS/: pdf-manager
pdf_manager/: __init__.py  app.py
pdf_manager.egg-info/: PKG-INFO  README.md  SOURCES.txt  entry_points.txt  pyproject.toml  requires.txt  top_level.txt
pdf_manager.egg-info/scripts/: build_macos_app.py
pdf_manager.egg-info/tests/ui/: test_main_window_smoke.py
pdf_manager.egg-info/tests/unit/: test_config.py  test_docling_adapter.py  test_export_excel.py  test_ollama_client.py  test_pdf_metadata.py
pdf_manager/core/: config.py  export_excel.py  pdf_metadata.py  pdf_text.py  prompts.py  scanner.py
pdf_manager/integrations/: __init__.py  agent_interface.py  docling_adapter.py  ollama_client.py
pdf_manager/models/: __init__.py  pdf_record.py
pdf_manager/ui/: __init__.py  distribution_chart.py  main_window.py  table_model.py
scripts/: build_macos_app.py
tests/: conftest.py
tests/ui/: test_main_window_smoke.py  test_table_model.py
tests/unit/: test_config.py  test_docling_adapter.py  test_export_excel.py  test_ollama_client.py  test_pdf_metadata.py  test_prompts.py  test_scanner.py
